# Vela.jl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CondaPkg.toml  LICENSE  Makefile  Project.toml  README.md  README.rst  examples  pyproject.toml  setup.py
0.1.2/: .documenter-siteinfo.json  index.html
apptainer/: vela.def
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
examples/: NGC6440E.par  NGC6440E.py  pure_rotaror.py  run_example.py  sim1.par  sim1.py  sim_jump.py
pint2vela/: __init__.py  convert_toas.py  pint2vela.py  priors.py  setup.py  vela.py
scripts/: par_tim-to-jlso.py  velaplot.jl
src/: Vela.jl  basis.jl  chi2.jl  component.jl  dispersion.jl  ephemeris.jl  jump.jl  likelihood.jl  measurement_noise.jl  parameter.jl  phase_offset.jl  pint2vela.py  posterior.jl  priors.jl  pyinter.jl  read_model_and_toas.jl  read_toas.jl  residuals.jl  selection.jl  solarsystem.jl  solarwind.jl  spindown.jl  summary_plot.jl  timing_model.jl  toa.jl  troposphere.jl
test/: NGC6440E.hdf5  NGC6440E.par  make_test_data_files.py  profview.jl  pure_rotator.hdf5  pure_rotator.hdf5.1  pure_rotator.par  pure_rotator.tim  runtests.jl  test_NGC6440E.jl  test_chromatic.jl  test_components.jl  test_dd.jl  test_dispersion.jl  test_ell1.jl  test_ephemeris.jl  test_expdip.jl  test_fd.jl  test_glitch.jl  test_gp_noise.jl  test_jump.jl  test_marginalized_timing_model.jl  test_ncp.jl  test_param.jl  test_phoff.jl  test_priors.jl  test_pure_rotator.jl  test_sim2.jl  test_sim3_gp.jl  test_spna.jl  (+11 more)
(+496 files in other folders)
